@@ -2,7 +2,6 @@ package org.ngafid.flights;
 
 import java.io.File;
 import java.io.FileOutputStream;
-import java.io.FileWriter;
 import java.io.InputStream;
 import java.io.IOException;
 
@@ -13,8 +12,6 @@ import java.util.zip.*;
 
 import java.util.Enumeration;
 import java.util.Optional;
-
-import spark.utils.IOUtils;
 
 import org.ngafid.Database;
 
@@ -28,9 +25,12 @@ public class CachedCSVWriter extends CSVWriter {
      * Finds the zip file with the filght requested
      *
      * @param directoryRoot the root directory of the zipped files
-     * @param flight the {@link Flight} to write data for
+     * @param flight        the {@link Flight} to write data for
+     * @param outputCSVFile the output file to write to
+     * @param isAirSync     whether the file is an air sync
      */
-    public CachedCSVWriter(String directoryRoot, Flight flight, Optional<File> outputCSVFile, boolean isAirSync) throws SQLException {
+    public CachedCSVWriter(String directoryRoot, Flight flight, Optional<File> outputCSVFile, boolean isAirSync)
+            throws SQLException {
         super(flight, outputCSVFile);
 
         System.out.println("creating file from: '" + directoryRoot + "'");
@@ -38,9 +38,14 @@ public class CachedCSVWriter extends CSVWriter {
         int uploadId = flight.getUploadId();
         System.out.println("target upload id is: " + uploadId);
 
-        //TODO: Probably better to pass the connection in as an argument to the constructor
-        Connection connection = Database.getConnection();
-        Upload upload = Upload.getUploadById(connection, uploadId);
+        //CHECKSTYLE:OFF
+        // TODO: Probably better to pass the connection in as an argument to the
+        //CHECKSTYLE:ON
+        // constructor
+        Upload upload;
+        try (Connection connection = Database.getConnection()) {
+            upload = Upload.getUploadById(connection, uploadId);
+        }
 
         System.out.println("got an upload with filename: '" + upload.getFilename() + "'");
 
@@ -56,7 +61,10 @@ public class CachedCSVWriter extends CSVWriter {
         this.zipFile = new File(archiveFilename);
 
         if (!this.zipFile.exists()) {
-            //TODO: reconstruct from database instead of existing on error
+            //CHECKSTYLE:OFF
+            // TODO: reconstruct from database instead of existing on error
+            //CHECKSTYLE:ON
+
             System.err.println("ERROR: archive file did not exist!");
             System.exit(1);
         } else {
@@ -71,7 +79,6 @@ public class CachedCSVWriter extends CSVWriter {
         }
 
         try {
-            //this.zipArchive = new ZipFile(this.zipFile);
             this.zipArchive = new ZipFile(archiveFilename);
         } catch (IOException e) {
             e.printStackTrace();
@@ -81,24 +88,24 @@ public class CachedCSVWriter extends CSVWriter {
         String filename = flight.getFilename();
         Enumeration<? extends ZipEntry> entries = zipArchive.entries();
         while (entries.hasMoreElements()) {
-            ZipEntry entry = entries.nextElement();
+            ZipEntry currentEntry = entries.nextElement();
 
-            if (entry.getName().equals(filename)) {
-                this.entry = entry;
-            } 
-        } 
+            if (currentEntry.getName().equals(filename)) {
+                this.entry = currentEntry;
+            }
+        }
     }
 
     /**
      * Gets the CSV file as primitive (binary) data
      *
-     * @return a primitive array of bytes 
+     * @return a primitive array of bytes
      */
-    public byte [] toBinaryData() throws IOException {
+    public byte[] toBinaryData() throws IOException {
         InputStream inputStream = zipArchive.getInputStream(this.entry);
-        return IOUtils.toByteArray(inputStream);
+        return inputStream.readAllBytes();
     }
-        
+
     /**
      * Accessor method for the {@link ZipEntry} associated with this flight
      *
@@ -132,20 +139,20 @@ public class CachedCSVWriter extends CSVWriter {
      * @throws IOException if there is a problem with file i/o
      */
     public ZipEntry getZipEntry() throws IOException {
-        ZipFile zipArchive = new ZipFile(this.zipFile);
+        ZipFile zipArchiveToWrite = new ZipFile(this.zipFile);
         String filename = super.flight.getFilename();
-        Enumeration<? extends ZipEntry> entries = zipArchive.entries();
+        Enumeration<? extends ZipEntry> entries = zipArchiveToWrite.entries();
 
         while (entries.hasMoreElements()) {
-            ZipEntry entry = entries.nextElement();
+            ZipEntry currentEntry = entries.nextElement();
 
-            if (entry.getName().equals(filename)) {
-                zipArchive.close();
-                return entry;
-            } 
-        } 
+            if (currentEntry.getName().equals(filename)) {
+                zipArchiveToWrite.close();
+                return currentEntry;
+            }
+        }
 
-        zipArchive.close();
+        zipArchiveToWrite.close();
         return null;
     }
 
